--- a/Trade/templates/tradeweb/bebought.html
+++ b/Trade/templates/tradeweb/bebought.html
@@ -3,8 +3,57 @@
     <div class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col-md-8">
-                {% for good in goods %}
-                    <div>{{ good.goodName }}</div>
+                <div class="row">
+                    <div class="col-md-4">
+                        商品
+                    </div>
+                    <div class="col-md-1">
+                        价格
+                    </div>
+                    <div class="col-md-2">
+                        下单时间
+                    </div>
+                    <div class="col-md-2">
+                        备注
+                    </div>
+                    <div class="col-md-2">
+                        买家
+                    </div>
+                    <div class="col-md-1">
+                        商品状态{# 已拍下 已支付 已收货#}
+                    </div>
+                </div>
+                <HR>
+                {% for order in orders %}
+                    <div class="row">
+                        <div class="col-md-1">
+                            <img style="width: 50px; height: 50px" src="{{ MEDIA_URL }}{{ order.goodID.goodImg }}">
+                        </div>
+                        <div class="col-md-3">
+                            <a href="{% url 'details' order.goodID.goodID %}">{{ order.goodID.goodName }}</a>
+                        </div>
+                        <div class="col-md-1">
+                            {{ order.goodID.price }}元
+                        </div>
+                        <div class="col-md-2">
+                            {{ order.orderTime | date:"Y-m-d H:i:s" }}
+                        </div>
+                        <div class="col-md-2">
+                            {{ order.remark }}
+                        </div>
+                        <div class="col-md-2">
+                            {{ order.userID.nickname }}
+                        </div>
+                        <div class="col-md-1">{# 已拍下 已支付 已收货#}
+                            {% if order.got == 1 %}
+                                <label class="badge badge-dark">已收货</label>
+                            {% elif order.got == 0 %}
+                                <label class="badge badge-success">已支付</label>
+                            {% elif order.got == 3 %}
+                                <label class="badge badge-warning">已拍下</label>
+                            {% endif %}
+                        </div>
+                    </div>
                 {% endfor %}
 
             </div>
