--- a/Trade/templates/tradeweb/release.html
+++ b/Trade/templates/tradeweb/release.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="form-group">
                             <label for="image">商品图片 可多选</label>
-                            <input name="images" type="file" multiple="multiple" class="form-control" id="image">
+                            <input name="images" accept="image/*" type="file" multiple="multiple" class="form-control" id="image">
                         </div>
                         <div class="form-group">
                             <label for="category">商品标签 空格隔开</label>
